# ppc-simulator

./: .gitignore  Gopkg.toml  Makefile  README.md  _main copy.go  error-log.txt  go.mod  go.sum  linux-build.sh  m  main.go  main_test.go  missing.txt  quick_test  quick_test.c
c/: stubs.c
cache/: _multi_layer_cache_exclusive_test.go  cache.go  cache_with_look_ahead.go  debug_cache.go  five_tuple.go  full_associative_fifo_cache.go  full_associative_lfu_cache.go  full_associative_lru_cache.go  full_associative_lru_cache_1tupleNbit.go  full_associative_random_cache.go  packet.go  (+14 more)
scripts/ppc-result-process/: exclusive_3cache_result.py  exclusive_lbits_change_capacity_result.py  hello.py  make_rule_unique.py  parse_results.py  pyproject.toml  setAssociative2cache.py
scripts/ppc-result-process/manage-database/: main.py
scripts/ppc-result-process/manage-database/app/: config.py  crud.py  db.py
scripts/ppc-result-process/manage-database/app/models/: __init__.py  _template.py  cache_layers.py  cache_policies.py  cache_stats.py  hit.py  inserted.py  longest_match_map.py  match_map.py  parameter.py  referred.py  replaced.py  stat_detail.py
scripts/ppc-result-process/manage-database/app/models/cache_models/: MultiLayerCacheExclusive.py  __init__.py
scripts/ppc-result-process/manage-database/tests/: test_data.json  test_models.py
scripts/ppc-result-process/models/: MultiLayerCacheExclusive.py
scripts/ppc-result-process/old/: exclusive_capacity_162024.py  exclusive_lbits_change_capacity.py  exclusive_multilayer.py  exclusive_multilayer_result.py  exclusivenbits.py
(+54 files in other folders)
