[project]
name = "ppc-result-process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "pre-commit>=3.8.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.2",
    "pymongo>=4.10.1",
    "pytest>=8.3.3",
    "pyttest>=0.1",
    "ruff>=0.6.8",
    "sqlalchemy>=2.0.35",
    "typing-extensions>=4.12.2",
]
